# Rust-Assets

./: Cargo.toml  README.md
src/: cli_utils.rs  compress.rs  main.rs
