[package]
name = "rust_assets"
version = "0.1.0"
description = "A utility to package any kind of data to a .rs file to ship with your executable" # inspired by xmonader's nim days project `nim-assets` 
authors = ["TerrificTable"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21.0"
lazy_static = "1.4.0"
